--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-autocomplete-input": "^1.0.20",
     "react-dom": "^18.2.0",
+    "react-pwa-installer-prompt": "^1.0.8",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
