fix: theme_color manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#FFFFFF",
+  "theme_color": "#1E1E1E",
   "background_color": "#1E1E1E"
 }
